fixed detail card layout on mobile screens

--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -7,14 +7,14 @@
 
 .details-card {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #262424;
     color: #FFD4D4;
     max-width: 140rem; 
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    min-height: 80vh;
+    // min-height: 80vh;
     box-shadow: .4rem .3rem 1rem #2624246f;
 
     
